First commit of page home (Login). Only UI is done

--- a/App/eatndrink/src/pages/home/home.html
+++ b/App/eatndrink/src/pages/home/home.html
@@ -1,14 +1,19 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
-</ion-header>
-
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <ion-row class="row-center" align-items-center>
+    <ion-col>
+      <ion-img src="assets/img/eatndrink_logo.svg" class="app-logo"></ion-img>
+    </ion-col>
+  </ion-row>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-row>
+      <ion-col class="section-login">
+        <button ion-button block class="button-facebook">Accedi con Facebook</button>
+        <button ion-button block class="button-googleplus">Accedi con Google+</button>
+        <button ion-button block class="button-twitter">Accedi con Twitter</button>
+      </ion-col>
+    </ion-row>
+  </ion-toolbar>
+</ion-footer>
