--- a/App/eatndrink/src/pages/eventlist/eventlist.html
+++ b/App/eatndrink/src/pages/eventlist/eventlist.html
@@ -1,35 +1,12 @@
 <ion-content>
   <ion-list>
-    <ion-item (click)="goEventPage(event)">
+    <ion-item *ngIf="events?.length == 0">{{ 'NO_EVENT_FOUND' | translate }}</ion-item>
+    <ion-item (click)="goEventPage(event.id, event.uid_token)" *ngFor="let event of events">
       <ion-avatar item-start>
-        <img src="https://t4.ftcdn.net/jpg/01/05/72/55/240_F_105725550_LsQIhnhtWkmUfJ7XMyFWAjTxtmsdlICx.jpg">
+        <img src="{{ event.photoURL }}">
       </ion-avatar>
-      <h2 class="item-text-wrap">Nome evento</h2>
-      <p>Via indirizzo evento.</p>
-      <button ion-button clear item-end class="event-price">20€</button>
-    </ion-item>
-    <ion-item (click)="goEventPage(event)">
-      <ion-avatar item-start>
-        <img src="https://t4.ftcdn.net/jpg/01/05/72/55/240_F_105725550_LsQIhnhtWkmUfJ7XMyFWAjTxtmsdlICx.jpg">
-      </ion-avatar>
-      <h2 class="item-text-wrap">Nome evento</h2>
-      <p>Via indirizzo evento.</p>
-      <button ion-button clear item-end class="event-price">20€</button>
-    </ion-item>
-    <ion-item (click)="goEventPage(event)">
-      <ion-avatar item-start>
-        <img src="https://t4.ftcdn.net/jpg/01/05/72/55/240_F_105725550_LsQIhnhtWkmUfJ7XMyFWAjTxtmsdlICx.jpg">
-      </ion-avatar>
-      <h2 class="item-text-wrap">Nome evento</h2>
-      <p>Via indirizzo evento.</p>
-      <button ion-button clear item-end class="event-price">20€</button>
+      <h2 class="item-text-wrap">{{ event.name }}</h2>
+      <button ion-button clear item-end class="event-price">{{ event.price }}€</button>
     </ion-item>
   </ion-list>
-
-    <ion-infinite-scroll (ionInfinite)="loadMoreEvents($event)">
-      <ion-infinite-scroll-content
-        loadingSpinner="bubbles"
-        loadingText="Loading...">
-      </ion-infinite-scroll-content>
-    </ion-infinite-scroll>
 </ion-content>
